--- a/app/index.html
+++ b/app/index.html
@@ -32,21 +32,8 @@
     </section>
 
     <section id="postGame" class="hidden">
-        <p class="results__number">value</p>
-        <div class="results">
-            <span class="results__words">word / слово</span>
-            <span class="results__words">word / слово</span>
-            <span class="results__words">word / слово</span>
-            <span class="results__words">word / слово</span>
-            <span class="results__words">word / слово</span>
-            <span class="results__words">word / слово</span>
-            <span class="results__words">word / слово</span>
-            <span class="results__words">word / слово</span>
-            <span class="results__words">word / слово</span>
-            <span class="results__words">word / слово</span>
-            <span class="results__words">word / слово</span>
-            <span class="results__words">word / слово</span>
-        </div>
+        <p class="results__number">0 right answers</p>
+        <div class="results"></div>
         <div class="postGame__buttons">
             <button type="reset" class="game__reset">reset all words</button>
             <button type="reset" class="game__restart">restart</button>
