kindergarten release version (1.0)

--- a/app/index.html
+++ b/app/index.html
@@ -17,16 +17,16 @@
             <input type="text" name="wordInput" id="wordInput" placeholder="Input the english word" required>
             <input type="text" name="translateInput" id="translateInput" placeholder="Input translate" required>
             <button type="submit" id="saver">SAVE WORD IN THE STORAGE</button>
-            <span class="words-counter">Words in storage: </span>
+            <span class="words-counter">Words in storage: 0 or previous amount of words</span>
         </form>
         <form id="select__form">
             <div class="select__wrapper">
                 <input type="radio" required name="dificultySelector" id="eazy" class="selector">
-                <label for="eazy">eazy</label>
+                <label for="eazy">ez</label>
                 <input type="radio" required name="dificultySelector" id="normal" class="selector">
-                <label for="normal">normal</label>
+                <label for="normal">normie</label>
                 <input type="radio" required name="dificultySelector" id="hard" class="selector">
-                <label for="hard">hard</label>
+                <label for="hard">real gamer</label>
             </div>
             <button type="submit" id="gameStart">START</button>
         </form>
@@ -47,7 +47,6 @@
         <div class="postGame__buttons">
             <button class="game__reset">reset my storage</button>
             <button class="game__backToMain">main menu</button>
-            <button class="game__restart">restart</button>
         </div>
     </section>
     <script src="js/game.js"></script>
